--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="jeopardyLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Pics\jeopardyLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blackBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Pics\blackBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
